--- a/Omal/Views/BasketV.xaml
+++ b/Omal/Views/BasketV.xaml
@@ -29,7 +29,7 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="50" />
                             </Grid.RowDefinitions>
-                    <CControls:CualevaPicker Grid.ColumnSpan="5" Grid.Row="0" Title="{Binding Cliente}" HorizontalOptions="FillAndExpand" ItemDisplayBinding="{Binding RagioneSociale}" SelectedItem="{Binding SelectedCliente, Mode=TwoWay}" ItemsSource="{Binding Clienti}"  />
+                    <CControls:CualevaPicker x:Name="ComboClienti" Grid.ColumnSpan="5" Grid.Row="0" Title="{Binding Cliente}" HorizontalOptions="FillAndExpand" ItemDisplayBinding="{Binding RagioneSociale}" SelectedItem="{Binding SelectedCliente, Mode=TwoWay}" ItemsSource="{Binding Clienti}"  />
                     <CControls:CualevaRoundedEntry  Placeholder="{Binding Note}"  Text="{Binding NoteOrdine, Mode=TwoWay}" TextColor="Black" Grid.Row="1" HeightRequest="40" Grid.ColumnSpan="5" HorizontalOptions="FillAndExpand" FontSize="13" BackgroundColor="Transparent"  LeftPadding="10"  BorderRadius="10"  CualevaRoundedEntryBackgroundColor="#FFFFFF"  />
                     <Label VerticalOptions="Center" Grid.Row="2" Grid.ColumnSpan="5" Margin="10" HorizontalOptions="StartAndExpand" Style="{StaticResource Descrizione}" Text="{Binding NumeroCarrelli}"  />
                     <Label FontSize="14" Grid.Row="3"  VerticalOptions="Center" Style="{StaticResource Titolo}"  Text="{Binding StrTotaleOrdine}"  TextColor="#004899" />    
@@ -37,7 +37,7 @@
                     <Label Margin="0,0,30,0" FontSize="14" Grid.Row="4" VerticalOptions="Center" Style="{StaticResource Titolo}"  Text="{Binding StrTotaleOrdineSconto, Mode=TwoWay}"  TextColor="#004899" />            
                     <StackLayout Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3">
                         <Label  VerticalOptions="Center" Style="{StaticResource Descrizione}"  Text="{Binding StrSconto}"  />    
-                        <CControls:CualevaRoundedEntry  CualevaRoundedEntryBackgroundColor="White" TextColor="Black"  HeightRequest="40" Text="{Binding ScontoOrdine}" WidthRequest="50" />            
+                        <CControls:CualevaRoundedEntry  CualevaRoundedEntryBackgroundColor="White" TextColor="Black"  HeightRequest="40" Text="{Binding ScontoOrdine}" Keyboard="Numeric" WidthRequest="50" />            
                     </StackLayout>
 
                     <Label  FontSize="14" Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="2"  VerticalOptions="Center" Text="{Binding TotaleOrdineConSconto, Mode=TwoWay, StringFormat='€ {0:F}'}" HorizontalOptions="EndAndExpand" Style="{StaticResource Titolo}" TextColor="{Binding ColorePrezzoScontato}"  />
