--- a/Omal/Views/OrdersV.xaml
+++ b/Omal/Views/OrdersV.xaml
@@ -33,8 +33,8 @@
                                     <ColumnDefinition />
                                     <ColumnDefinition />
                                 </Grid.ColumnDefinitions>
-                                <Label Grid.Row="0" Style="{StaticResource Titolo}" Text="{Binding ClienteRagSoc}" />
-                                <Label Grid.Row="1" Style="{StaticResource Descrizione}" Text="{Binding DataInizio}" />
+                                <Label Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource Titolo}" Text="{Binding ClienteRagSoc}" HorizontalOptions="Fill" />
+                                <Label Grid.Row="1" Style="{StaticResource Descrizione}" Text="{Binding DataInizio, StringFormat='{}{0:dd/MM/yyyy HH:mm}'}" />
                                 <Label Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" VerticalOptions="Center" TextColor="Red" Text="{Binding Stato, Converter={StaticResource OrderStatusConverter}}" HorizontalOptions="End" />
                                 </Grid>
                             
