--- a/Omal/App.xaml
+++ b/Omal/App.xaml
@@ -78,6 +78,7 @@
             </Style>
             <Style x:Key="WhiteEntry" TargetType="CControls:CualevaRoundedEntry">
                 <Setter Property="TextColor" Value="Black" />
+                <Setter Property="MinimumHeightRequest" Value="40" />
                 <Setter Property="FontFamily" Value="{StaticResource NormalFont}" />
                 <Setter Property="CualevaRoundedEntryBackgroundColor" Value="#FFFFFF" />
             </Style>
